# rust_rest_api

./: Cargo.toml  Rocket.toml
api/: Cargo.toml
api/src/: lib.rs  pool.rs
api/templates/: index.html.tera  new.html.tera
entity/: Cargo.toml
entity/src/: lib.rs  post.rs
migration/: Cargo.toml
migration/src/: m20220120_000001_create_post_table.rs  main.rs
service/: Cargo.toml
service/src/: mutation.rs  query.rs
service/tests/: mock.rs
