[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.5"
async-trait = "0.1.78"
futures = "0.3.30"
futures-util = "0.3.30"
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
serde_json = "1.0.114"
tokio = "1.36.0"
entity = { path = "../entity" }
service = { path = "../service" }
migration = { path = "../migration" }
rocket-swagger-ui = "0.1.5"
swagger-ui = "0.1.5"


[dependencies.sea-orm-rocket]
version = "0.5"
