[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }

[dependencies.sea-orm]
version = "1.0.0-rc.2" # sea-orm version
features = ["runtime-tokio-native-tls", "sqlx-postgres"]

[dev-dependencies]
tokio = "1.20.0"

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]